# SimpliciText

./: .gitignore  README.md  bun.lockb  index.html  notes.md  package.json  vite.config.ts
.github/workflows/: main.yml
src/: achievements.ts  fonts.ts  main.ts  other.ts  shortcuts.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/themes/: dark.css  light.css
