[package]
name = "simplici_text"
version = "1.3.0"
description = "A minimal, lightweight text editor"
authors = ["xxX"]
license = ""
repository = "https://github.com/Alixxx-please/SimpliciText"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-message", "window-start-dragging", "fs-read-file", "fs-create-dir", "os-all", "fs-write-file", "fs-remove-file", "fs-exists", "macos-private-api", "window-set-title", "window-set-always-on-top", "window-close", "notification-all", "process-exit", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
